--- a/index.html
+++ b/index.html
@@ -57,21 +57,19 @@ document.addEventListener('DOMContentLoaded', function(event)
 </ul>
 </div>
 </div>
-<div id="wb_Shape3">
-<img src="images/img0003.png" id="Shape3" alt="" width="444" height="357"></div>
-<div id="wb_Shape4">
-<img src="images/img0004.png" id="Shape4" alt="" width="92" height="91"></div>
-<div id="wb_Text1">
-<span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:48px;">!</span></div>
-<div id="wb_Text2">
-<span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:43px;">Website is currently under devlopment</span></div>
-<div id="wb_Shape5">
-<img src="images/img0005.png" id="Shape5" alt="" width="969" height="578"></div>
-<div id="wb_Shape6">
-<img src="images/img0006.png" id="Shape6" alt="" width="153" height="148"></div>
+<div id="wb_Image3">
+<img src="images/Elliott.png" id="Image3" alt="" width="1070" height="585"></div>
+<div id="wb_Image2">
+<img src="images/Placeholder.png" id="Image2" alt="" width="707" height="375"></div>
+<div id="wb_Image4">
+<img src="images/Powerrankingsholder.png" id="Image4" alt="" width="707" height="199"></div>
 <div id="wb_Text3">
-<span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:85px;">!</span></div>
-<div id="wb_Text4">
-<span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:85px;">Website is currently under devlopment</span></div>
+<span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:29px;line-height:36px;">Weekly Recap: 9-18-22<br></span><span style="color:#FFFFFF;font-family:'Gogh Extra Bold';font-size:21px;line-height:40px;">By: Mega | 9-23-22</span></div>
+<div id="wb_Text5">
+<span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:29px;line-height:36px;">RVW Fantasy Portal<br></span><span style="color:#FFFFFF;font-family:'Gogh Extra Bold';font-size:21px;line-height:40px;">By: Mega | 9-23-22</span></div>
+<div id="wb_Image5">
+<img src="images/RVWLogo.png" id="Image5" alt="" width="197" height="113"></div>
+<div id="wb_Text7">
+<span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:43px;">Power<br>Rankings</span></div>
 </body>
 </html>
