--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ document.addEventListener('DOMContentLoaded', function(event)
 </head>
 <body>
 <div id="wb_Shape2">
-<img src="images/img0002.png" id="Shape2" alt="" width="466" height="75"></div>
+<img src="images/img0002.png" id="Shape2" alt="" width="431" height="75"></div>
 <div id="wb_Shape1">
 <img src="images/img0001.png" id="Shape1" alt="" width="1920" height="75"></div>
 <div id="wb_Image1">
@@ -70,6 +70,6 @@ document.addEventListener('DOMContentLoaded', function(event)
 <div id="wb_Image5">
 <img src="images/RVWLogo.png" id="Image5" alt="" width="197" height="113"></div>
 <div id="wb_Text7">
-<span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:43px;">Power<br>Rankings</span></div>
+<span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:43px;line-height:46px;">Power<br>Rankings</span></div>
 </body>
 </html>
