--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ document.addEventListener('DOMContentLoaded', function(event)
 </head>
 <body>
 <div id="wb_Shape2">
-<img src="images/img0002.png" id="Shape2" alt="" width="431" height="75"></div>
+<img src="images/img0002.png" id="Shape2" alt="" width="407" height="75"></div>
 <div id="wb_Shape1">
 <img src="images/img0001.png" id="Shape1" alt="" width="1920" height="75"></div>
 <div id="wb_Image1">
@@ -64,13 +64,13 @@ document.addEventListener('DOMContentLoaded', function(event)
 <div id="wb_Image4">
 <img src="images/Powerrankingsholder.png" id="Image4" alt="" width="707" height="199"></div>
 <div id="wb_Text3">
-<span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:29px;line-height:36px;">Weekly Recap: 9-18-22<br></span><span style="color:#FFFFFF;font-family:'Gogh Extra Bold';font-size:21px;line-height:40px;">By: Mega | 9-23-22</span></div>
+<span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:35px;line-height:36px;">Weekly Recap: 9-18-22</span><span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:21px;line-height:29px;"><br></span><span style="color:#FFFFFF;font-family:'Gogh Extra Bold';font-size:21px;line-height:29px;">By: Mega | 9-23-22</span></div>
 <div id="wb_Text5">
-<span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:29px;line-height:36px;">RVW Fantasy Portal<br></span><span style="color:#FFFFFF;font-family:'Gogh Extra Bold';font-size:21px;line-height:40px;">By: Mega | 9-23-22</span></div>
+<span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:35px;line-height:36px;">RVW Fantasy Portal</span><span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:21px;line-height:29px;"><br></span><span style="color:#FFFFFF;font-family:'Gogh Extra Bold';font-size:21px;line-height:29px;">By: Mega | 9-23-22</span></div>
 <div id="wb_Image5">
 <img src="images/RVWLogo.png" id="Image5" alt="" width="197" height="113"></div>
 <div id="wb_Text7">
-<span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:43px;line-height:46px;">Power<br>Rankings</span></div>
+<span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:43px;line-height:52px;">Power<br>Rankings</span></div>
 <div id="wb_Shape3">
 <img src="images/img0003.png" id="Shape3" alt="" width="185" height="6"></div>
 <div id="wb_Text1">
