--- a/index.html
+++ b/index.html
@@ -16,54 +16,17 @@
 <link href="RVWLogo.png" rel="icon" sizes="422x241" type="image/png">
 <link href="RVWWebsite.css" rel="stylesheet">
 <link href="index.css" rel="stylesheet">
-<script src="jscookmenu.min.js"></script>
-<script>
-var cmMenuBar1 =
-{
-   mainFolderLeft: '',
-   mainFolderRight: '',
-   mainItemLeft: '',
-   mainItemRight: '',
-   folderLeft: '',
-   folderRight: '',
-   itemLeft: '',
-   itemRight: '',
-   mainSpacing: 0,
-   subSpacing: 0,
-   delay: 100,
-   offsetHMainAdjust: [0, 0],
-   offsetSubAdjust: [0, 0]
-};
-var cmMenuBar1HSplit = [_cmNoClick, '<td class="MenuBar1MenuSplitLeft"><div></div></td>' +
-                                    '<td class="MenuBar1MenuSplitText"><div></div></td>' +
-                                    '<td class="MenuBar1MenuSplitRight"><div></div></td>'];
-var cmMenuBar1MainVSplit = [_cmNoClick, '<div><table width="45" cellspacing="0"><tr><td class="MenuBar1HorizontalSplit">|</td></tr></table></div>'];
-var cmMenuBar1MainHSplit = [_cmNoClick, '<td colspan="3" class="MenuBar1MainSplitText"><div></div></td>'];
-document.addEventListener('DOMContentLoaded', function(event)
-{
-   cmDrawFromText('MenuBar1', 'hbr', cmMenuBar1, 'MenuBar1');
-});
-</script>
 <!-- Insert Google Analytics code here -->
 </head>
 <body>
+<div id="wb_Shape5">
+<img src="images/img0001.png" id="Shape5" alt="" width="1920" height="75"></div>
 <div id="wb_Shape2">
-<img src="images/img0002.png" id="Shape2" alt="" width="407" height="75"></div>
+<img src="images/img0002.png" id="Shape2" alt="" width="480" height="75"></div>
 <div id="wb_Shape1">
-<img src="images/img0001.png" id="Shape1" alt="" width="1920" height="75"></div>
+<img src="images/img0003.png" id="Shape1" alt="" width="320" height="75"></div>
 <div id="wb_Image1">
 <img src="images/RVWLogo.png" id="Image1" alt="" width="92" height="53"></div>
-<div id="wb_MenuBar1">
-<div id="MenuBar1">
-<ul style="display:none;">
-   <li><span></span><span>HOME</span></li>
-   <li><span></span><span>SHOWS</span></li>
-   <li><span></span><span>ROSTER</span></li>
-   <li><span></span><span>NETWORK</span></li>
-   <li><span></span><span>SHOP</span></li>
-</ul>
-</div>
-</div>
 <div id="wb_Image3">
 <img src="images/Elliott.png" id="Image3" alt="" width="1070" height="585"></div>
 <div id="wb_Image2">
@@ -79,7 +42,7 @@ document.addEventListener('DOMContentLoaded', function(event)
 <div id="wb_Text7">
 <span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:32px;">Power<br>Rankings</span></div>
 <div id="wb_Shape3">
-<img src="images/img0003.png" id="Shape3" alt="" width="185" height="6"></div>
+<img src="images/img0004.png" id="Shape3" alt="" width="185" height="6"></div>
 <div id="wb_Text1">
 <span style="color:#000000;font-family:'Mont Heavy DEMO';font-size:29px;line-height:40px;">PPV Results</span></div>
 <div id="wb_Image6">
@@ -90,5 +53,7 @@ document.addEventListener('DOMContentLoaded', function(event)
 <img src="images/SummerSolsticeIcon.png" id="Image8" alt="" width="430" height="200"></div>
 <div id="wb_Image9">
 <img src="images/Final4Icon.png" id="Image9" alt="" width="430" height="200"></div>
+<div id="wb_Image10">
+<img src="images/RVWLogo.png" id="Image10" alt="" width="92" height="53"></div>
 </body>
 </html>
