--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="Untitled1.css" rel="stylesheet">
 <link href="index.css" rel="stylesheet">
+<script src="jscookmenu.min.js"></script>
+<script>
+var cmMenuBar1 =
+{
+   mainFolderLeft: '',
+   mainFolderRight: '',
+   mainItemLeft: '',
+   mainItemRight: '',
+   folderLeft: '',
+   folderRight: '',
+   itemLeft: '',
+   itemRight: '',
+   mainSpacing: 0,
+   subSpacing: 0,
+   delay: 100,
+   offsetHMainAdjust: [0, 0],
+   offsetSubAdjust: [0, 0]
+};
+var cmMenuBar1HSplit = [_cmNoClick, '<td class="MenuBar1MenuSplitLeft"><div></div></td>' +
+                                    '<td class="MenuBar1MenuSplitText"><div></div></td>' +
+                                    '<td class="MenuBar1MenuSplitRight"><div></div></td>'];
+var cmMenuBar1MainVSplit = [_cmNoClick, '<div><table width="35" cellspacing="0"><tr><td class="MenuBar1HorizontalSplit">|</td></tr></table></div>'];
+var cmMenuBar1MainHSplit = [_cmNoClick, '<td colspan="3" class="MenuBar1MainSplitText"><div></div></td>'];
+document.addEventListener('DOMContentLoaded', function(event)
+{
+   cmDrawFromText('MenuBar1', 'hbr', cmMenuBar1, 'MenuBar1');
+});
+</script>
 </head>
 <body>
 <div id="wb_Shape5">
@@ -15,8 +43,6 @@
 <img src="images/img0002.png" id="Shape2" alt="" width="481" height="75"></div>
 <div id="wb_Shape1">
 <img src="images/img0003.png" id="Shape1" alt="" width="320" height="75"></div>
-<div id="wb_Image1">
-<img src="images/RVWLogo.png" id="Image1" alt="" width="92" height="53"></div>
 <div id="wb_Image3">
 <img src="images/Elliott.png" id="Image3" alt="" width="1070" height="585"></div>
 <div id="wb_Image2">
@@ -45,5 +71,19 @@
 <img src="images/Final4Icon.png" id="Image9" alt="" width="430" height="200"></div>
 <div id="wb_Image10">
 <img src="images/RVWLogo.png" id="Image10" alt="" width="92" height="53"></div>
+<div id="wb_Shape4">
+<img src="images/img0005.png" id="Shape4" alt="" width="192" height="5"></div>
+<div id="wb_MenuBar1">
+<div id="MenuBar1">
+<ul style="display:none;">
+   <li><span></span><span>HOME</span></li>
+   <li><span></span><span>SHOWS</span></li>
+   <li><span></span><span>ROSTER</span></li>
+   <li><span></span><span>NETWORK</span></li>
+   <li><span></span><a href="https://shop.rvwleague.com/" target="_self" title="SHOP">SHOP</a>
+</li>
+</ul>
+</div>
+</div>
 </body>
 </html>
