--- a/roster.html
+++ b/roster.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="font-awesome.min.css" rel="stylesheet">
 <link href="Untitled1.css" rel="stylesheet">
-<link href="shows.css" rel="stylesheet">
+<link href="roster.css" rel="stylesheet">
 <script src="jscookmenu.min.js"></script>
 <script src="jquery-3.6.0.min.js"></script>
 <script src="wb.panel.min.js"></script>
@@ -47,7 +47,7 @@ $(document).ready(function()
 </head>
 <body>
 <div id="wb_Shape5">
-<img src="images/img0006.png" id="Shape5" alt="" width="1920" height="75"></div>
+<img src="images/img0007.png" id="Shape5" alt="" width="1920" height="75"></div>
 <div id="wb_Image10">
 <a href="./index.html"><img src="images/RVWLogo.png" id="Image10" alt="" width="92" height="53"></a></div>
 <div id="wb_MenuBar1">
@@ -67,7 +67,7 @@ $(document).ready(function()
 </div>
 </div>
 <div id="wb_Shape2">
-<img src="images/img0003.png" id="Shape2" alt="" width="481" height="75"></div>
+<img src="images/img0009.png" id="Shape2" alt="" width="481" height="75"></div>
 <div id="wb_Image1">
 <a href="./index.html"><img src="images/RVWLogo.png" id="Image1" alt="" width="92" height="53"></a></div>
 <div id="wb_PanelMenu1">
