--- a/index.html
+++ b/index.html
@@ -62,16 +62,10 @@ $(window).on('load', function()
 <img src="images/Elliott.png" id="Image3" alt="" width="1070" height="585"></div>
 <div id="wb_Image2">
 <img src="images/Placeholder.png" id="Image2" alt="" width="707" height="375"></div>
-<div id="wb_Image4">
-<img src="images/Powerrankingsholder.png" id="Image4" alt="" width="707" height="199"></div>
 <div id="wb_Text3">
-<span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:24px;line-height:36px;">Weekly Recap: 9-18-22</span><span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:21px;line-height:29px;"><br></span><span style="color:#FFFFFF;font-family:'Gogh Extra Bold';font-size:19px;line-height:29px;">By: Mega | 9-23-22</span></div>
+<span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:24px;line-height:36px;">News Article Title</span><span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:21px;line-height:29px;"><br></span><span style="color:#FFFFFF;font-family:'Gogh Extra Bold';font-size:19px;line-height:29px;">By: Mega | MM-DD-YYYY</span></div>
 <div id="wb_Text5">
-<span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:24px;line-height:36px;">RVW Fantasy Portal</span><span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:21px;line-height:29px;"><br></span><span style="color:#FFFFFF;font-family:'Gogh Extra Bold';font-size:19px;line-height:29px;">By: Mega | 9-23-22</span></div>
-<div id="wb_Image5">
-<img src="images/RVWLogo.png" id="Image5" alt="" width="155" height="89"></div>
-<div id="wb_Text7">
-<span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:32px;">Power<br>Rankings</span></div>
+<span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:24px;line-height:36px;">News Article Title</span><span style="color:#FFFFFF;font-family:'Mont Heavy DEMO';font-size:21px;line-height:29px;"><br></span><span style="color:#FFFFFF;font-family:'Gogh Extra Bold';font-size:19px;line-height:29px;">By: Mega | MM-DD-YYYY</span></div>
 <div id="wb_Shape3">
 <img src="images/img0004.png" id="Shape3" alt="" width="185" height="6"></div>
 <div id="wb_Text1">
@@ -118,6 +112,7 @@ $(window).on('load', function()
 </div>
 <div id="wb_Image1">
 <a href="./index.html"><img src="images/RVWLogo.png" id="Image1" alt="" width="92" height="53"></a></div>
+<a href="./powerrankings.html"><img src="images/img0024.png" id="MergedObject1" alt="" title="" width="707" height="199"></a>
 <div id="preloader"></div>
 </body>
 </html>
