--- a/shows.html
+++ b/shows.html
@@ -90,6 +90,10 @@ $(window).on('load', function()
 </ul>
 </div>
 </div>
+<div id="wb_Image2">
+<img src="images/AscendencyTab.png" id="Image2" alt="" width="977" height="510"></div>
+<div id="wb_Image3">
+<img src="images/AftershockTab.png" id="Image3" alt="" width="977" height="510"></div>
 <div id="preloader"></div>
 </body>
 </html>
