--- a/powerrankings.html
+++ b/powerrankings.html
@@ -55,6 +55,24 @@ $(window).on('load', function()
 </script>
 </head>
 <body>
+<div id="wb_Shape26">
+<img src="images/img0035.png" id="Shape26" alt="" width="450" height="63"></div>
+<div id="wb_Shape21">
+<img src="images/img0036.png" id="Shape21" alt="" width="450" height="63"></div>
+<div id="wb_Shape22">
+<img src="images/img0037.png" id="Shape22" alt="" width="450" height="63"></div>
+<div id="wb_Shape23">
+<img src="images/img0038.png" id="Shape23" alt="" width="450" height="63"></div>
+<div id="wb_Shape24">
+<img src="images/img0039.png" id="Shape24" alt="" width="450" height="63"></div>
+<div id="wb_Shape25">
+<img src="images/img0040.png" id="Shape25" alt="" width="450" height="63"></div>
+<div id="wb_Shape18">
+<img src="images/img0041.png" id="Shape18" alt="" width="450" height="63"></div>
+<div id="wb_Shape20">
+<img src="images/img0042.png" id="Shape20" alt="" width="450" height="63"></div>
+<div id="wb_Shape19">
+<img src="images/img0043.png" id="Shape19" alt="" width="450" height="63"></div>
 <div id="wb_Shape5">
 <img src="images/img0019.png" id="Shape5" alt="" width="1920" height="75"></div>
 <div id="wb_Image10">
@@ -101,12 +119,6 @@ $(window).on('load', function()
 <span style="color:#000000;font-family:'Mont Heavy DEMO';font-size:37px;">RVW Power Rankings</span></div>
 <div id="wb_Shape4">
 <img src="images/img0023.png" id="Shape4" alt="" width="1764" height="43"></div>
-<div id="wb_Text3">
-<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:21px;">POSITION</span></div>
-<div id="wb_Text4">
-<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:21px;">NAME</span></div>
-<div id="wb_Text5">
-<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:21px;">BRAND</span></div>
 <div id="wb_Shape6">
 <img src="images/img0025.png" id="Shape6" alt="" width="1764" height="89"></div>
 <div id="wb_Shape7">
@@ -147,6 +159,32 @@ $(window).on('load', function()
 <span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:64px;">9</span></div>
 <div id="wb_Text15">
 <span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:64px;">10</span></div>
+<div id="wb_Shape16">
+<img src="images/img0044.png" id="Shape16" alt="" width="450" height="43"></div>
+<div id="wb_Text27">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:29px;">2</span></div>
+<div id="wb_Text28">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:29px;">3</span></div>
+<div id="wb_Text29">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:29px;">4</span></div>
+<div id="wb_Text30">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:29px;">5</span></div>
+<div id="wb_Text31">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:29px;">6</span></div>
+<div id="wb_Text32">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:29px;">7</span></div>
+<div id="wb_Text33">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:29px;">8</span></div>
+<div id="wb_Text34">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:29px;">9</span></div>
+<div id="wb_Text35">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:29px;">10</span></div>
+<div id="wb_Text3">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:17px;">POSITION</span></div>
+<div id="wb_Text4">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:17px;">NAME</span></div>
+<div id="wb_Shape17">
+<img src="images/img0045.png" id="Shape17" alt="" width="450" height="63"></div>
 <div id="wb_Text16">
 <span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:64px;">The Pack</span></div>
 <div id="wb_Text17">
@@ -165,28 +203,30 @@ $(window).on('load', function()
 <span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:64px;">The Vengeful Ones</span></div>
 <div id="wb_Text24">
 <span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:64px;">Greg Powers</span></div>
-<div id="wb_Text25">
+<div id="wb_Text5">
 <span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:64px;">Johnny Cooper</span></div>
-<div id="wb_Image2">
-<img src="images/AscendencyLogo.png" id="Image2" alt="" width="335" height="76"></div>
-<div id="wb_Image3">
-<img src="images/AscendencyLogo.png" id="Image3" alt="" width="335" height="76"></div>
-<div id="wb_Image4">
-<img src="images/AscendencyLogo.png" id="Image4" alt="" width="335" height="76"></div>
-<div id="wb_Image5">
-<img src="images/AftershockLogo2.png" id="Image5" alt="" width="244" height="75"></div>
-<div id="wb_Image6">
-<img src="images/AftershockLogo2.png" id="Image6" alt="" width="244" height="75"></div>
-<div id="wb_Image7">
-<img src="images/AftershockLogo2.png" id="Image7" alt="" width="244" height="75"></div>
-<div id="wb_Image8">
-<img src="images/AftershockLogo2.png" id="Image8" alt="" width="244" height="75"></div>
-<div id="wb_Image9">
-<img src="images/AftershockLogo2.png" id="Image9" alt="" width="244" height="75"></div>
-<div id="wb_Image11">
-<img src="images/AftershockLogo2.png" id="Image11" alt="" width="244" height="75"></div>
-<div id="wb_Image12">
-<img src="images/AftershockLogo2.png" id="Image12" alt="" width="244" height="75"></div>
+<div id="wb_Text25">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:29px;">The Pack</span></div>
+<div id="wb_Text36">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:29px;">Zach Elliott</span></div>
+<div id="wb_Text37">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:29px;">The Sydistic Spades</span></div>
+<div id="wb_Text38">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:29px;">Hunter Martin</span></div>
+<div id="wb_Text39">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:29px;">Damien Storm</span></div>
+<div id="wb_Text40">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:29px;">The K&amp;S Academy</span></div>
+<div id="wb_Text41">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:29px;">Rey Oscuro</span></div>
+<div id="wb_Text42">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:29px;">The Vengeful Ones</span></div>
+<div id="wb_Text43">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:29px;">Greg Powers</span></div>
+<div id="wb_Text44">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:29px;">Johnny Cooper</span></div>
+<div id="wb_Text26">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:29px;">1</span></div>
 <div id="preloader"></div>
 </body>
 </html>
