--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@ $(window).on('load', function()
 <div id="wb_Image1">
 <a href="./index.html"><img src="images/RVWLogo.png" id="Image1" alt="" width="92" height="53"></a></div>
 <a href="./powerrankings.html"><img src="images/img0024.png" id="MergedObject1" alt="" title="" width="707" height="199"></a>
+<div id="wb_Image4">
+<img src="images/MergedObject1.jpg" id="Image4" alt="" width="446" height="126"></div>
 <div id="preloader"></div>
 </body>
 </html>
