--- a/powerrankings.html
+++ b/powerrankings.html
@@ -227,6 +227,10 @@ $(window).on('load', function()
 <span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:29px;">Johnny Cooper</span></div>
 <div id="wb_Text26">
 <span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:29px;">1</span></div>
+<div id="wb_Text45">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:17px;">POSITION</span></div>
+<div id="wb_Text46">
+<span style="color:#DC143C;font-family:'Mont Heavy DEMO';font-size:17px;">NAME</span></div>
 <div id="preloader"></div>
 </body>
 </html>
